Revert "fixed shadowing, colors, alignments on mac"
This reverts commit a8c3d3fe0e1352369199482e1c3e5c2c8db1bcec.

Fix #5005

--- a/less/button.less
+++ b/less/button.less
@@ -58,7 +58,7 @@ span.browserButton,
     font-size: 0px;
     width: 24px;
     height: 100%;
-    opacity: 0.65;
+    opacity: 0.5;
     background: url('../img/icon_new_frame.svg') 50% 20% scroll / 20px no-repeat;
     &:hover {
       opacity: 0.8;
