--- a/less/window.less
+++ b/less/window.less
@@ -47,7 +47,7 @@ html,
 }
 
 .top {
-    background: linear-gradient(to bottom, #fbfbfb, #ededed, );
+    background: linear-gradient(to bottom, white, @chromeSecondary, );
 }
 
 .mainContainer {
